<package format="2">
  <name>moveit_custom_perception</name>
  <version>1.0.11</version>
  <description>Custom Octomap updater using Pointclouds</description>

  <author email="vishwasns99@gmail.com">Vishwas NS</author>
  <license>BSD</license>
  <maintainer email="vishwasns99@gmail.com">vishwas</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>roscpp</depend>
  <depend>rosconsole</depend>
  <depend>urdf</depend>
  <depend>message_filters</depend>
  <depend version_gte="1.11.2">pluginlib</depend>
  <depend>image_transport</depend>
  <depend>glut</depend>
  <depend>libglew-dev</depend>
  <depend>libomp-dev</depend>
  <depend>opengl</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>object_recognition_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>moveit_ros_occupancy_map_monitor</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_perception</depend>
  <depend>nodelet</depend>

  <build_depend>eigen</build_depend>

  <test_depend>rosunit</test_depend>

  <export>
    <moveit_ros_perception plugin="${prefix}/custom_octomap_updater_plugin_description.xml"/>
  </export>

</package>
